# discordBot-MCP

./: .env.example  .gitignore  pyproject.toml
src/discord_service/: server.py
